--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -24,6 +25,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "daisyui": "^3.0.3"
+    "daisyui": "^3.0.3",
+    "prisma": "^4.15.0"
   }
 }
